find background images; add intro page and scroll options

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,27 +1,24 @@
-h1 {
-	text-align: center;
-}
-
-h3 {
-	text-align: center;
-}
-
-h5 {
+h1, h3, h5 {
 	text-align: center;
 }
 
 #about_photo {
-	width: 75%;
-	border-radius: 100%;
+    border-radius: 75%;
+    opacity: 1;
+    width: 387px;
+    text-align: center;
+    padding-top: 20px;
 }
 
 .thumbnail {
 	border: none;
+    background-color: transparent;
+    opacity: 1;
 }
 
 #about_description {
 	font-size: 20px;
-	padding-top: 30px;
+	padding-top: 20px;
 }
 
 .skills li {
@@ -29,6 +26,66 @@ h5 {
 	list-style-type: none;
 }
 
+.skills {
+    margin-bottom: 30px;
+}
+
 .exp_title {
 	text-align: center;
+}
+
+.section {
+	padding-top: 65px;
+}
+
+.row {
+    background-color: white;
+    opacity: 0.80;
+}
+
+/* Return to top button styling */
+
+#return-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background: rgb(0, 0, 0);
+    background: rgba(0, 0, 0, 0.7);
+    width: 50px;
+    height: 50px;
+    display: block;
+    text-decoration: none;
+    -webkit-border-radius: 35px;
+    -moz-border-radius: 35px;
+    border-radius: 35px;
+    display: none;
+    -webkit-transition: all 0.3s linear;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+    z-index: 1;
+}
+
+#return-to-top i {
+    color: #fff;
+    margin: 0;
+    position: relative;
+    left: 16px;
+    top: 13px;
+    font-size: 19px;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+
+#return-to-top:hover {
+    background: rgba(0, 0, 0, 0.9);
+}
+
+#return-to-top:hover i {
+    color: #fff;
+    top: 5px;
 }
