change carduo bullet

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -164,7 +164,7 @@
 					<ul>
 						<li>A single-page game application where the player accumulates points by matching two cards of each type.</li>
 						<li>Source code: <a href="https://github.com/Soronie/Carduo">https://github.com/Soronie/Carduo</a></li>
-						<li>Play it <a href="#">here</a>! (Link doesn't work yet.)</li>
+						<li>Link to play coming soon!</li>
 					</ul>
 				</div>
 				<div class="col-md-4 col-xs-12">
