change opening message

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,7 +46,7 @@
 
 	    <div id="landing-header">
  			<h1>Hi, I'm Rafaeli.</h1>
- 			<h1>I'm a developer, musician, and gamer!</h1>
+ 			<h1>I'm an aspiring web developer and tech enthusiast!</h1>
 			<a class="scroll btn btn-lg btn-primary" href="#about_me">Learn More About Me</a>
 	    </div>
     
