--- a/views/index.ejs
+++ b/views/index.ejs
@@ -165,7 +165,7 @@
 					<ul>
 						<li>A single-page game application where the player accumulates points by matching two cards of each type.</li>
 						<li>Source code: <a href="https://github.com/Soronie/Carduo">https://github.com/Soronie/Carduo</a></li>
-						<li>Link to play coming soon!</li>
+						<li>Play it <a href="https://carduo.herokuapp.com/">here</a>!</li>
 					</ul>
 				</div>
 				<div class="col-md-4 col-xs-12">
